# frank_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GOOGLE_API_SETUP.md  README.md  app.py  camel_sse_transport.py  config.py  deploy_frank.sh  docker-compose.yml  instructions_for_chatgpt.txt  logging_config.py  mcp-manifest.json  openapi-python-client.json  pyproject.toml  requirements.txt  setup_google_credentials.py  telegram.prod.json  telegram.test.json  test_cred.py  test_swarm_auto.py  test_swarm_checkin.py  test_swarm_checkins_filter.py
actions/: __init__.py  android.py  android_phone.py  calendar.py  claudia.py  contacts.py  diagnostics.py  helpers.py  jorbs.py  openapi.json  operator_debug.py  scripts.py  sms.py  style_capture.py  swarm.py  system.py  system_status.py  telegram.py  telegram_bot.py  ups.py
clients/: README.md  pyproject.toml
data/: briefing_state.json  jorbs.db
docs/: AGENT_ORCHESTRATION.md  GOOGLE_API_SETUP.md
frank_bot/: __init__.py  actions_api.py  actions_logic.py  config.py  http_app.py  logging_config.py  manifests.py  mcp_server.py  openapi.py
meta/: __init__.py  api.py  executor.py  introspection.py  jobs.py  scripts.py
openapi/: __init__.py  spec-chatgpt.json  spec-openai.json  spec.json
personalities/: SEAN.md  concierge.json  default.json  expeditor.json  negotiator.json  researcher.json  sean-voice.json
prompts/: agent_system.md  android-screenshot-persist-and-send.json  androidPhone-design.md  androidPhone-feature.json  claudia-api-integration-hardening.json  claudia-chat-integration.md  diagnose-prod-api-outage.json  fix-background-loop-health.json  fix-claudia-prompt-dispatch.json  fix-system-status-panel-refresh-jank.json  frank-meta-api-and-executor.json  homelab-android-device.md  homelab-infra-adb-keys-prompt.md  homelab-infra-android-device-prompt.md  homelab-infra-restart-verify-prompt.md  homelab-infra-update-timer-durability.json  homelab-infra-vault-apply-prompt.md  jorb_session_system.md  jorbs-autonomous-tasks.json  let-food-into-civic-disable-sms-webhook.md  sean-voice-and-jorb-discovery.json  sms-receive-and-mms.json  switchboard_system.md  telegram-bot-listener-and-frankapi-expansion.json  telegram-integration.json  unified-jorbs-design.md  unified-jorbs-implementation.json  web-dashboard.json
(+233 files in other folders)
